nginx-setup/api-ingress.yml
# api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 52-225-92-124.nip.io
      secretName: api-tls-secret
  rules:
    - host: 52-225-92-124.nip.io
      http:
        paths:
          - path: /api/product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80

          - path: /api/cart/
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 80

          - path: /api/checkout/
            pathType: Prefix
            backend:
              service:
                name: checkout-service
                port:
                  number: 80
